use recommended deps

--- a/gRPC-UpAndRunning/GettingStarted/lib/build.gradle
+++ b/gRPC-UpAndRunning/GettingStarted/lib/build.gradle
@@ -8,10 +8,14 @@ repositories {
     mavenCentral()
 }
 
+
+def gRPCVersion = '1.24.1'
+
 dependencies {
-    implementation 'com.google.protobuf:protobuf-java:3.6.1'
-    implementation 'io.grpc:grpc-stub:1.15.1'
-    implementation 'io.grpc:grpc-protobuf:1.15.1'
+    implementation "com.google.protobuf:protobuf-java:3.6.1"
+    implementation "io.grpc:grpc-netty:$gRPCVersion"
+    implementation "io.grpc:grpc-stub:$gRPCVersion"
+    implementation "io.grpc:grpc-protobuf:$gRPCVersion"
 
     if (JavaVersion.current().isJava9Compatible()) {
         // Workaround for @javax.annotation.Generated
@@ -30,17 +34,16 @@ dependencies {
    // testProtobuf files("lib/protos-test.tar.gz")
 }
 
-protobuf {
-    protoc {
-        // The artifact spec for the Protobuf Compiler
-        artifact = 'com.google.protobuf:protoc:3.6.1'
+protobuf{
+    protoc{
+        artifact = 'com.google.protobuf:protoc:3.9.2'
     }
     plugins {
         // Optional: an artifact spec for a protoc plugin, with "grpc" as
         // the identifier, which can be referred to in the "plugins"
         // container of the "generateProtoTasks" closure.
         grpc {
-            artifact = 'io.grpc:protoc-gen-grpc-java:1.15.1'
+            artifact = "io.grpc:protoc-gen-grpc-java:${gRPCVersion}"
         }
     }
     generateProtoTasks {
